Add schema-gated AUTH bypass PoCs for DYNAMIC hand-off.
Keep AI-authored headers under server length/charset gates and force non-empty PoCs on auth surfaces so DYNAMIC can attempt sandbox_probe instead of narrative-only conclusions.

Co-authored-by: Cursor <cursoragent@cursor.com>